# actr

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
actrix/crates/ais/: Cargo.toml
actrix/crates/ais/src/: handlers.rs  issuer.rs  ks_client_wrapper.rs  lib.rs  renewal.rs  sn.rs  storage.rs
actrix/crates/ais/tests/: README.md  integration_test.rs
actrix/crates/common/: Cargo.toml  build.rs
actrix/crates/common/src/: lib.rs  metrics.rs
actrix/crates/common/src/aid/: identity_claims.rs  key_cache.rs
actrix/crates/common/src/aid/credential/: error.rs  mod.rs  validator.rs
actrix/crates/common/src/config/: ais.rs  ks.rs  mod.rs  services.rs  signaling.rs  supervisor.rs  tracing.rs  turn.rs
actrix/crates/common/src/error/: base_error.rs  config_error.rs  mod.rs  serialization_error.rs
actrix/crates/common/src/monitoring/: mod.rs  status.rs
actrix/crates/common/src/realm/: acl.rs  config.rs  mod.rs  model.rs  repository.rs  validation.rs
actrix/crates/common/src/storage/: db.rs  mod.rs
actrix/crates/common/src/tenant/: acl.rs  compatibility.rs  config.rs  error.rs  mod.rs  model.rs  repository.rs  service_type.rs  validation.rs
actrix/crates/common/src/types/: mod.rs  peer.rs
actrix/crates/common/src/util/: config.rs  test_utils.rs
actrix/crates/contracts/: Cargo.toml  README.md  build.rs
actrix/crates/contracts/proto/: admin.proto  common.proto  signer.proto
actrix/crates/control/: Cargo.toml
actrix/crates/control/src/: error.rs  metrics.rs  nonce_auth.rs
actrix/crates/ks/: Cargo.toml  build.rs
actrix/crates/ks/proto/: keyserver.proto
actrix/crates/ks/src/: auth.rs.bak  client.rs  config.rs  crypto.rs  error.rs  grpc_client.rs  grpc_handlers.rs  handlers.rs  lib.rs  service.rs  types.rs
actrix/crates/ks/src/storage/: backend.rs  config.rs  mod.rs  postgres.rs  redis.rs  sqlite.rs
actrix/crates/ks/tests/: http_integration.rs
actrix/crates/mfr/: Cargo.toml
actrix/crates/sdk/: Cargo.toml
actrix/crates/sdk/src/: lib.rs
actrix/crates/sdk/src/control/: mod.rs
actrix/crates/services/mfr/: Cargo.toml
actrix/crates/services/mfr/src/: crypto.rs  dns.rs  error.rs  github.rs  handlers.rs  lib.rs  manager.rs  reserved.rs  tests.rs
actrix/crates/signaling/: Cargo.toml  README_GEOIP.md
actrix/crates/signaling/src/: ais_client.rs  axum_router.rs  compatibility_cache.rs  lib.rs  load_balancer.rs  presence.rs  ratelimit.rs  server.rs  service_registry.rs  service_registry_storage.rs  trace.rs
actrix/crates/signaling/tests/: README.md  integration_test.rs
actrix/crates/stun/: Cargo.toml
actrix/crates/stun/src/: error.rs  lib.rs
actrix/crates/supervit/: Cargo.toml  README.md  build.rs
actrix/crates/supervit/examples/: supervisord.rs
actrix/crates/supervit/proto/: supervisor.proto
actrix/crates/supervit/src/: client.rs  config.rs  error.rs  lib.rs  metrics.rs  nonce_auth.rs  realm.rs  service.rs
actrix/crates/supervit/tests/: supervisor_integration.rs
actrix/crates/turn/: Cargo.toml
actrix/crates/turn/src/: authenticator.rs  claims.rs  error.rs  lib.rs  token.rs
actrix/deploy/: Cargo.toml  README.md  README.zh.md  actrix-release.env.example  actrix.service  install.sh
actrix/deploy/scripts/: actrix-release-pull.sh
actrix/deploy/src/: artifact.rs  checksum.rs  main.rs  release.rs
actrix/deploy/src/cli/: args.rs  commands.rs  mod.rs
actrix/deploy/src/config/: deployment_config.rs  install_config.rs  mod.rs  network_config.rs  ssl_config.rs  system_config.rs  unified_wizard.rs  wizard.rs
actrix/deploy/src/docker/: composer.rs  mod.rs
actrix/deploy/src/menu/: app.rs  mod.rs  navigation.rs
actrix/deploy/src/menu/framework/: components.rs  input.rs  layout.rs  mod.rs  page.rs  screen.rs  theme.rs
actrix/deploy/src/menu/pages/: config_page.rs  dependencies_page.rs  install_page.rs  main_page.rs  mod.rs  systemd_install_page.rs  uninstall_page.rs  wizard_page.rs
actrix/deploy/src/services/: mod.rs  service_selection.rs  service_type.rs
actrix/deploy/src/system/: check_result.rs  dependencies.rs  firewall.rs  helpers.rs  install.rs  mod.rs  network.rs  provider.rs  releases.rs  service.rs  uninstall.rs  user_management.rs  validation.rs
actrix/deploy/src/system/providers/: debian.rs  mod.rs
actrix/deploy/src/template/: mod.rs  processor.rs  systemd_service.rs
actrix/deploy/src/tpl/: mod.rs  systemd_service.rs
actrix/deploy/tpl/: actrix.service  config.template.toml
bindings/python/: pyproject.toml
bindings/python/actr-workload/src/actr_workload/: protocol.py
e2e/: Cargo.toml
e2e/package-runtime-echo/: README.md  run.sh
e2e/package-runtime-echo/client-guest/src/: lib.rs
e2e/package-runtime-echo/client/src/: main.rs
e2e/package-runtime-echo/config/: actrix.toml
e2e/package-runtime-echo/lib/: common.sh
e2e/polyglot-echo/: README.md
e2e/polyglot-echo/clients/rust/: manifest.toml
e2e/polyglot-echo/clients/rust/src/: main.rs
e2e/polyglot-echo/config/: linked-rust-runtime.toml.tpl  server-runtime.toml.tpl  stream-server-runtime.toml.tpl
e2e/polyglot-echo/services/wasm-rust/: Cargo.toml
e2e/swift-datastream-app/: README.md  actr.lock.toml  actr.toml.tpl  manifest.toml  project.yml  run.sh
e2e/swift-datastream-app/DataStreamApp/: Info.plist
e2e/swift-datastream-app/DataStreamApp/App/: DataStreamApp.swift
e2e/swift-datastream-app/DataStreamApp/Probes/: DataStreamProbeRunner.swift
e2e/swift-datastream-app/DataStreamApp/Services/: ActrService.swift
e2e/swift-datastream-app/DataStreamApp/Views/: ContentView.swift
e2e/swift-datastream-app/protos/local/: probe.proto
e2e/swift-echo-app/: README.md  actr.lock.toml  actr.toml.tpl  manifest.toml  project.yml  run.sh
e2e/swift-echo-app/EchoApp/: ActrService.swift  ContentView.swift  Info.plist
e2e/swift-echo-app/EchoApp.xcodeproj/: project.pbxproj
e2e/swift-echo-app/protos/local/: local_echo.proto
e2e/swift-ts-workload/: README.md  run.sh
e2e/swift-ts-workload/SwiftTsWorkloadApp/Probes/: DuplexEchoProbeRunner.swift
e2e/swift-ts-workload/SwiftTsWorkloadApp/Services/: ActrService.swift
e2e/typescript-stream/: run.sh
(+686 files in other folders)
