[package]
name = "deploy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive deployment helper for actrix WebRTC services"

[[bin]]
name = "deploy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { version = "0.9" }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "process",
    "fs",
    "rt-multi-thread",
    "macros",
] }
dialoguer = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
local-ip-address = { workspace = true }
getch = { version = "0.2" }
ctrlc = { version = "3.4" }
toml_edit = "0.22"

# 本地依赖
actrix-common = { path = "../crates/common" }

# Unix-specific dependencies for user/group management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["user"] }
users = { workspace = true }
libc = { version = "0.2" }
