[project]
name = "actr-python"
description = "Python SDK for Actor-RTC, backed by the actr_raw Rust extension module."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Actor-RTC Contributors" }]
keywords = ["actor", "async", "distributed-systems", "rust", "webrtc"]
classifiers = [
  "Framework :: AsyncIO",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/actor-rtc/actr/blob/main/actor-rtc.github.io/zh-hans/PY_BINDING.md"
Homepage = "https://github.com/actor-rtc/actr-python"
Issues = "https://github.com/actor-rtc/actr-python/issues"
Source = "https://github.com/actor-rtc/actr-python"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
# Explicitly include actr package
include = [
  "python/actr/**/*.py",
  "python/actr/**/*.pyi",
  "python/actr/py.typed",
]
manifest-path = "Cargo.toml"
module-name = "actr.actr_raw"
python-packages = ["actr"]
python-source = "python"
strip = true
sdist-include = [
  "python/README.md",
  "python/DEMO.md",
  "python/ARCHITECTURE.md",
  "python/OVERVIEW.md",
  "python/SUMMARY.md",
  "python/demo_complete.py",
  "python/demo_echo_service.py",
  "python/example_decorator_usage.py",
]
