[package]
name = "actrix-ais"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Actor Identity Service (AIS) - ActrId registration and credential issuing"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }

## Actr framework dependencies
actr-protocol = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

## Crypto dependencies
ecies = { workspace = true }
ed25519-dalek = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = "0.10"

## Database
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

## Utilities
base64 = { workspace = true }
rand = "0.8.5"
toml = { version = "0.8" }

## Rate limiting
tower_governor = "0.8"
tower = "0.5"
governor = "0.10"


# Internal dependencies
platform = { path = "../platform", package = "actrix-platform" }
signer = { path = "../signer", package = "actrix-signer" }
actrix-mfr = { path = "../mfr" }

[dev-dependencies]
tempfile = { workspace = true }
nonce-auth = { workspace = true }
tonic = { workspace = true }
serial_test = { workspace = true }
rand = "0.8.5"
prost = { workspace = true }

[lib]
name = "ais"

[lints]
workspace = true
