[package]
name = "actrix-common"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Actrix 项目的通用基础设施组件"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
base64 = "0.21.5"
chrono = "0.4.31"
rand = "0.8.5"
ecies = { workspace = true }
uuid = { workspace = true }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
url = { version = "2", features = ["serde"] }
actr-framework = { workspace = true }
actr-protocol = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
pwrzv = "0.5.0"
nonce-auth = { workspace = true }
async-trait = "0.1"
sqlx = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
once_cell = "1.19"
ks = { path = "../ks" }
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
serial_test = "3"
tempfile = "3.8"

[build-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"