[package]
name = "ks"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Key Server (KS) - 椭圆曲线密钥生成和管理服务"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# gRPC dependencies
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
prost = { workspace = true }
prost-types = { workspace = true }
tokio-stream = "0.1.17"

# Crypto dependencies
ecies = { workspace = true }
base64 = { workspace = true }
aes-gcm = "0.10"  # AES-256-GCM for KEK encryption

# Storage backends
# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
deadpool-redis = { version = "0.14", optional = true }

# SQLite and PostgreSQL - 使用 sqlx 统一异步接口
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros"], optional = true }

# HTTP client for testing
reqwest = { workspace = true }

# Authentication and security
nonce-auth = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

# Utilities
rand = "0.8.5"
hex = { workspace = true }
async-trait = "0.1"

# Internal dependencies
# Note: circular dependency avoided - base depends on ks for client types

# Monitoring
prometheus = "0.13"
lazy_static = "1.4"

[dev-dependencies]
tower = "0.5"
hyper = "1.0"
tempfile = "3.10"
toml = "0.8"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
default = ["backend-sqlite"]
backend-sqlite = ["sqlx"]  # SQLite 使用 sqlx
backend-redis = ["redis", "deadpool-redis"]
backend-postgres = ["sqlx"]
backend-all = ["backend-sqlite", "backend-redis", "backend-postgres"]