[package]
name = "actrix-mfr"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Manufacturer Registry (MFR) - actor manufacturer registration and package signing"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
toml = { version = "0.8" }
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

# Not in workspace
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Internal dependencies
platform = { path = "../platform", package = "actrix-platform" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
