[package]
name = "actrix-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Unified public SDK facade for Actrix control-plane APIs"

[features]
default = []
testing = []

[dependencies]
admin = { path = "../control" }
