[package]
name = "actrix-signaling"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebRTC信令服务实现，作为aux-servers的组件"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
opentelemetry = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
tokio = { workspace = true }
tokio-util = "0.7"
futures-util = { workspace = true }
tracing = { workspace = true }
bytes = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

# WebSocket implementation
axum = { workspace = true, features = ["ws"] }

# Actrix Protocol
actr-protocol = { workspace = true }
# Protobuf
prost = { workspace = true }
prost-types = { workspace = true }
base64 = { workspace = true }

# 内部依赖
platform = { path = "../platform", package = "actrix-platform" }

# Database
sqlx = { workspace = true }

# Rate limiting
governor = "0.10"

# OpenTelemetry (W3C trace context inject/extract)
opentelemetry = { version = "0.31.0", features = ["trace"], optional = true }
tracing-opentelemetry = { version = "0.32.0", optional = true }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
tracing-subscriber = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { version = "0.8" }
serial_test = "3.2"

[lib]
name = "signaling"

[lints]
workspace = true
