[package]
name = "stun"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
description = "WebRTC STUN服务实现，作为aux-servers的组件"

[dependencies]
# webrtc-stun = { version = "0.8", package = "stun" }
webrtc-stun = { version = "0.8.0", package = "stun" }

tokio = { workspace = true, features = ["net", "signal"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
webrtc = { workspace = true }

actrix-common = { path = "../common" }

