[package]
name = "turn"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
description = "WebRTC TURN服务实现，作为aux-servers的组件"

[dependencies]
# webrtc-turn = { version = "0.1.3" }
# webrtc-util = { version = "0.1.17" }
turn_crate = { package = "turn", version = "0.10.0" }
webrtc-util = "0.11.0"

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
webrtc = { workspace = true }
md5 = "0.8"
twox-hash = "2.0"
ecies = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4.31"
rsa = "0.9.2"
once_cell = "1.21.3"
base64 = { workspace = true }
lru = "0.12"

actrix-common = { path = "../common" }
actr-protocol = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
nonce-auth = { workspace = true }
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
serial_test = "3"
uuid = { workspace = true, features = ["v4"] }
