[package]
name = "actrix-mfr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Manufacturer Registry (MFR) - actor manufacturer registration and package signing"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }

# Not in workspace
rand = "0.8"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# Internal dependencies
platform = { path = "../../platform" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
serial_test = { workspace = true }
